crates/clove-tui/src/snapshots/clove_tui__snapshot__blocked_tab_landscape.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
  All 7  │  Ready 4  │  Blocked 1
┌ Items (1) ───────────────────────────────────┐┌ Overview · Dep tree · Comments ──────────────────────────────────────┐
│▌○ F #3 p2 Write integration tests ✗          ││ #3  FEATURE  Write integration tests                ○ open · blocked │
│                                              ││                                                                   p2 │
│                                              ││                                                               deps 1 │
│                                              ││                                                                      │
│                                              ││ blocked by #2                                                        │
│                                              ││                                                                      │
│                                              ││ ──────────────────────────────────────────────────────────────────── │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││ labels area:qa                        created Jan 1 · updated Jan 12 │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
7 item(s) loaded   ?: help · q: quit
