crates/clove-tui/src/snapshots/clove_tui__snapshot__blocked_tab_portrait.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ clove ───────────────────────────────┐
│  All 7  │  Rdy 4  │  Blk 1           │
└──────────────────────────────────────┘
┌ Items (1) ───────────────────────────┐
│▌○ F #3 p2 Write integration tests ✗  │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
7 item(s) loaded  ?·q
