crates/clove-tui/src/snapshots/clove_tui__snapshot__blocked_tab_square.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ clove ───────────────────────────────────────────────────┐
│  All 7  │  Ready 4  │  Blocked 1                         │
└──────────────────────────────────────────────────────────┘
┌ Items (1) ───────────────────────────────────────────────┐
│▌○ F #K2M8ZP5R • Write integration tests ✗                │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌ Overview · Dep tree · Comments ──────────────────────────┐
│ #K2M8ZP5R  • FEATURE                    ○ open · blocked │
│ Write integration tests                           deps 1 │
│ blocked by #9QX4D1B7                                     │
│──────────────────────────────────────────────────────────│
│ End-to-end coverage of the public API surface.           │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│──────────────────────────────────────────────────────────│
│ labels area:qa            created Jan 1 · updated Jan 12 │
└──────────────────────────────────────────────────────────┘
7 item(s) loaded   ?: help · q: quit
