crates/clove-tui/src/snapshots/clove_tui__snapshot__comments_landscape.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
  All 7  │  Ready 4  │  Blocked 1
┌ Items (7) ───────────────────────────────────┐┌ Overview · Dep tree · Comments ──────────────────────────────────────┐
│▌◐ F #9QX4D1B7 ! Build REST API ●             ││ grace-example-com  2026-01-05 10:00 UTC                              │
│ ○ B #0HZ6C3PW ↑ Investigate flaky CI ●       ││ Started on the CRUD layer.                                           │
│ ● C #7AF3K2MN ↑ Set up database schema       ││                                                                      │
│ ○ E #3HT6WYG5 • Ship v1 release ●            ││ ada-example-com  2026-01-06 14:30 UTC                                │
│ ○ F #K2M8ZP5R • Write integration tests ✗    ││ Schema is ready — you're unblocked.                                  │
│ ○ F #5RB9NC2V • Frontend dashboard ●         ││                                                                      │
│ ● D #8XQ4F7DM ↓ Docs site                    ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
7 item(s) loaded   ?: help · q: quit
