crates/clove-tui/src/snapshots/clove_tui__snapshot__comments_portrait.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ clove ───────────────────────────────┐
│  All 7  │  Rdy 4  │  Blk 1           │
└──────────────────────────────────────┘
┌ Items (7) ───────────────────────────┐
│▌◐ F #2 ! Build REST API ●            │
│ ● C #1 ↑ Set up database schema      │
│ ○ B #7 ↑ Investigate flaky CI ●      │
│ ○ F #3 • Write integration tests ✗   │
│ ○ E #4 • Ship v1 release ●           │
│ ○ F #5 • Frontend dashboard ●        │
│ ● D #6 ↓ Docs site                   │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
7 item(s) loaded  ?·q
