crates/clove-tui/src/snapshots/clove_tui__snapshot__dep_tree_square.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ clove ───────────────────────────────────────────────────┐
│  All 7  │  Ready 4  │  Blocked 1                         │
└──────────────────────────────────────────────────────────┘
┌ Items (7) ───────────────────────────────────────────────┐
│▌◐ F #9QX4D1B7 ! Build REST API ●                         │
│ ○ B #0HZ6C3PW ↑ Investigate flaky CI ●                   │
│ ● C #7AF3K2MN ↑ Set up database schema                   │
│ ○ E #3HT6WYG5 • Ship v1 release ●                        │
│ ○ F #K2M8ZP5R • Write integration tests ✗                │
│ ○ F #5RB9NC2V • Frontend dashboard ●                     │
│ ● D #8XQ4F7DM ↓ Docs site                                │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌ Overview · Dep tree · Comments ──────────────────────────┐
│ Dependency tree (this → its dependencies)                │
│                                                          │
│ ◐ #9QX4D1B7  Build REST API [ready]                      │
│ └── ● #7AF3K2MN  Set up database schema                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
7 item(s) loaded   ?: help · q: quit
